--- a/参数优化记录.md
+++ b/参数优化记录.md
@@ -100,3 +100,78 @@ python experiments/run_experiment.py --dataset assist09 --n_runs 5
 | `lr_decay_factor` | - | **0.5** |
 
 > **TODO 实验 4**：运行以上新参数，完成后补充结果。
+
+---
+
+## 实验 A17-1  （ASSIST17 baseline - 速度问题）
+
+0. **运行命令**
+```bash
+python experiments/run_experiment.py --dataset assist17 --n_runs 5
+```
+
+1. **配置**
+- max_seq_len: 200
+- batch_size: 32
+- dropout: 0.2
+- 硬件: RTX 3060 Laptop GPU
+
+2. **关键结果**
+- 训练速度: **3.5 小时/epoch** ❌ 极慢！
+- Val AUC: 0.7630 → 0.7723 → 0.7774（稳步提升）✓
+- 无过拟合现象 ✓
+- 速度: 1.6-1.8 it/s
+
+3. **结果分析**
+- ASSIST17 平均序列长度 **551.7**（是ASSIST09的7倍）
+- 20,546 个batch/epoch（是ASSIST09的3倍）
+- 注意力机制复杂度：O(seq_len²)，200² = 40,000
+- **预计 100 epochs 需要 350 小时（14.6天）** ❌ 不可接受
+- **根本原因**：长序列导致注意力计算爆炸
+
+4. **优化思路**
+- **关键瓶颈**：序列长度的平方复杂度
+- **解决方案**：
+  1. 截断序列：200 → 100（预期提速 3-4倍）⭐⭐⭐
+  2. 增大batch：32 → 64（预期提速 1.25倍）⭐⭐
+  3. 减少图更新：每10 → 每50 batch（预期提速 1.1倍）⭐
+  4. 减少轮数：100 → 50 epochs（先验证效果）
+- **综合预期提速**：5-7倍（3.5小时 → 30-40分钟）
+
+5. **参数调整**
+| 参数 | 原值 | 调整后 | 理由 |
+|------|------|--------|------|
+| max_seq_len | 200 | **100** | 关键：减少注意力计算量（O(n²)）|
+| batch_size | 32 | **64** | 提升GPU并行度 |
+| n_epochs | 100 | **50** | 先验证50轮效果 |
+| concept_update_freq | 10 | **50** | 减少图卷积计算 |
+
+---
+
+## 实验 A17-2  （优化后 - 待运行）
+
+0. **运行命令**
+```bash
+python experiments/run_experiment.py --dataset assist17 --n_runs 5
+```
+
+1. **配置（已优化）**
+- max_seq_len: **100** ⭐
+- batch_size: **64** ⭐
+- n_epochs: **50**
+- concept_update_freq: **50** ⭐
+
+2. **预期结果**
+- 训练速度: **30-40 分钟/epoch**（提速 5-7倍）
+- Batch数: **10,273/epoch**（减半）
+- 总时间: **25-33 小时**（1-1.5天，可接受）
+- Val AUC: **0.77-0.80**（预计略降0.01或持平）
+
+3. **验证指标**
+运行第1个epoch后，检查：
+- [ ] 速度 > 4 it/s（提升 2.5倍）
+- [ ] 耗时 < 45 分钟（提升 4倍）
+- [ ] Val AUC ≥ 0.75（性能保持）
+- [ ] GPU利用率 > 80%
+
+> **TODO 实验 A17-2**：停止当前训练，重新运行优化版本。完成后补充实际结果。
