feat: 优化数据集17训练参数

--- a/参数优化记录.md
+++ b/参数优化记录.md
@@ -148,7 +148,7 @@ python experiments/run_experiment.py --dataset assist17 --n_runs 5
 
 ---
 
-## 实验 A17-2  （优化后 - 待运行）
+## 实验 A17-2  （速度优化版 - 台式机RTX 5070 Ti）
 
 0. **运行命令**
 ```bash
@@ -157,21 +157,121 @@ python experiments/run_experiment.py --dataset assist17 --n_runs 5
 
 1. **配置（已优化）**
 - max_seq_len: **100** ⭐
-- batch_size: **64** ⭐
+- batch_size: **96** ⭐ (台式机配置)
+- dropout: **0.2**
 - n_epochs: **50**
+- patience: **10**
 - concept_update_freq: **50** ⭐
+- 硬件: **RTX 5070 Ti** (更强GPU)
+
+2. **关键结果**
+- 训练速度: **30-34 分钟/epoch** ✓ (提速约6-7倍)
+- Batch数: **6,849/epoch**
+- 速度: **3.4-4.1 it/s** ✓
+- **Run 1**: 峰值 Val AUC = **0.7804** @ epoch 5, Test AUC = **0.7664**, Early Stop @ epoch 15
+- **Run 2**: 峰值 Val AUC = **0.7797** @ epoch 4, Test AUC = **0.7667**, Early Stop @ epoch 14
+- **Run 3**: 峰值 Val AUC = **0.7791** @ epoch 5 (进行中)
+- **平均 Test AUC**: **0.7665** (Run 1-2)
+
+3. **结果分析**
+
+**✅ 速度优化成功**：
+- 从3.5小时/epoch → 30-34分钟/epoch（**提速6-7倍**）
+- 单次运行约7-8小时（Early Stop在15轮触发）
+- 5次运行约35-40小时（1.5天，可接受）
+
+**❌ 性能问题严重**：
+- **明显过拟合**：峰值在Epoch 4-5，之后持续下降（0.780 → 0.752，下降2.8%）
+- **性能未达预期**：Test AUC 0.7665 vs 论文预期 0.78-0.79（差距1.5-2.5%）
+- **训练损失与验证性能背离**：训练损失持续下降（0.613 → 0.500），但验证AUC在下降
+
+**🔍 根本原因**：
+1. **max_seq_len=100 太短**：
+   - ASSIST17平均序列长度551.7
+   - 只保留了18%的序列信息
+   - 丢失大量长期依赖 → 性能上限降低
+
+2. **batch_size=96 太大**：
+   - 更大batch → 更稳定梯度 → 更容易过拟合
+   - 泛化能力下降
+
+3. **dropout=0.2 正则化不足**：
+   - ASSIST17序列更长、更复杂
+   - 需要更强的正则化（建议0.3）
+
+4. **patience=10 太保守**：
+   - 峰值在Epoch 4-5
+   - Early Stop在Epoch 14-15触发
+   - 在峰值后又训练了10个epoch（都在过拟合）
+
+4. **优化思路**
+
+**核心矛盾**：速度与性能的权衡
+- max_seq_len=200：性能好但太慢（3.5小时/epoch）
+- max_seq_len=100：快但性能差（0.7665 vs 0.79）
+- **解决方案**：max_seq_len=150（平衡点）
+
+**具体策略**：
+1. **适度增加序列长度**：100 → 150（保留27%信息，预期+0.01-0.015 AUC）
+2. **降低batch size**：96 → 64（增强泛化，预期+0.003-0.005 AUC）
+3. **增强正则化**：dropout 0.2 → 0.3（减轻过拟合，预期+0.005-0.010 AUC）
+4. **更激进Early Stop**：patience 10 → 5（在峰值后5轮停止，预期+0.002-0.005 AUC）
+5. **添加训练技巧**：L2正则化(1e-5)、Warmup(2000步)、LR Scheduler
+
+**预期综合提升**：+0.020-0.035 AUC → **Test AUC 0.785-0.795** ✓
+
+5. **参数调整**
+| 参数 | A17-2 | A17-3 (优化) | 理由 |
+|------|-------|--------------|------|
+| max_seq_len | 100 | **150** | 平衡性能与速度（保留更多序列信息）|
+| batch_size | 96 | **64** | 增强泛化能力 |
+| dropout | 0.2 | **0.3** | 加强正则化，减轻过拟合 |
+| patience | 10 | **5** | 更激进的Early Stopping |
+| n_epochs | 50 | **30** | Early Stop通常在15触发，减少无效训练 |
+| l2_lambda | - | **1e-5** | 新增L2正则化 |
+| warmup_steps | - | **2000** | 新增学习率Warmup |
+| lr_decay_patience | - | **5** | 新增学习率衰减 |
+| lr_decay_factor | - | **0.5** | 学习率衰减因子 |
+
+**预期效果**：
+- 训练速度: **45分钟/epoch**（比A17-2慢1.5倍，但仍可接受）
+- Early Stop: **Epoch 10左右**（比A17-2更早）
+- 单次运行: **约7.5小时**（与A17-2相当）
+- Test AUC: **0.785-0.795**（提升0.020-0.030）✓
+
+---
+
+## 实验 A17-3  （性能优化版 - 待运行）
+
+0. **运行命令**
+```bash
+python experiments/run_experiment.py --dataset assist17 --n-runs 5
+```
+
+1. **配置（已优化）**
+- max_seq_len: **150** ⭐ (平衡点)
+- batch_size: **64** ⭐
+- dropout: **0.3** ⭐
+- n_epochs: **30**
+- patience: **5** ⭐
+- l2_lambda: **1e-5** (新增)
+- warmup_steps: **2000** (新增)
+- lr_decay_patience: **5** (新增)
+- lr_decay_factor: **0.5** (新增)
 
 2. **预期结果**
-- 训练速度: **30-40 分钟/epoch**（提速 5-7倍）
-- Batch数: **10,273/epoch**（减半）
-- 总时间: **25-33 小时**（1-1.5天，可接受）
-- Val AUC: **0.77-0.80**（预计略降0.01或持平）
+- 训练速度: **45分钟/epoch**
+- Early Stop: **Epoch 10左右**
+- 单次运行: **约7.5小时**
+- 5次运行: **约37.5小时（1.5天）**
+- 峰值 Val AUC: **0.790±0.005**
+- Test AUC: **0.785-0.795** ✓ (达到论文要求)
 
 3. **验证指标**
-运行第1个epoch后，检查：
-- [ ] 速度 > 4 it/s（提升 2.5倍）
-- [ ] 耗时 < 45 分钟（提升 4倍）
-- [ ] Val AUC ≥ 0.75（性能保持）
-- [ ] GPU利用率 > 80%
+运行完成后，检查：
+- [ ] Test AUC ≥ 0.785（性能达标）
+- [ ] Early Stop在Epoch 8-12触发（过拟合减轻）
+- [ ] 峰值后AUC下降 < 0.015（过拟合控制）
+- [ ] 训练时间 < 8小时/次（速度可接受）
 
-> **TODO 实验 A17-2**：停止当前训练，重新运行优化版本。完成后补充实际结果。
+> **TODO 实验 A17-3**：使用优化配置重新运行。完成后补充实际结果。
