feat: 17训练参数优化

--- a/参数优化记录.md
+++ b/参数优化记录.md
@@ -214,11 +214,17 @@ python experiments/run_experiment.py --dataset assist17 --n_runs 5
 **具体策略**：
 1. **适度增加序列长度**：100 → 150（保留27%信息，预期+0.01-0.015 AUC）
 2. **降低batch size**：96 → 64（增强泛化，预期+0.003-0.005 AUC）
-3. **增强正则化**：dropout 0.2 → 0.3（减轻过拟合，预期+0.005-0.010 AUC）
-4. **更激进Early Stop**：patience 10 → 5（在峰值后5轮停止，预期+0.002-0.005 AUC）
-5. **添加训练技巧**：L2正则化(1e-5)、Warmup(2000步)、LR Scheduler
+  3. **增强正则化**：dropout 0.2 → 0.3（减轻过拟合，预期+0.005-0.010 AUC）
+  4. **更激进Early Stop**：patience 10 → 5（在峰值后5轮停止，预期+0.002-0.005 AUC）
+  5. **添加L2正则化**：l2_lambda=1e-5（轻度正则化，减轻过拟合）
 
-**预期综合提升**：+0.020-0.035 AUC → **Test AUC 0.785-0.795** ✓
+**注意**：不添加Warmup和LR Scheduler，原因：
+- ✅ 论文中未使用，保持一致性
+- ✅ ASSIST17训练已经稳定（前5个epoch稳步上升）
+- ✅ 问题在于过拟合而非训练初期不稳定
+- ✅ 简化实验变量，便于分析
+
+**预期综合提升**：+0.020-0.030 AUC → **Test AUC 0.785-0.795** ✓
 
 5. **参数调整**
 | 参数 | A17-2 | A17-3 (优化) | 理由 |
@@ -229,9 +235,6 @@ python experiments/run_experiment.py --dataset assist17 --n_runs 5
 | patience | 10 | **5** | 更激进的Early Stopping |
 | n_epochs | 50 | **30** | Early Stop通常在15触发，减少无效训练 |
 | l2_lambda | - | **1e-5** | 新增L2正则化 |
-| warmup_steps | - | **2000** | 新增学习率Warmup |
-| lr_decay_patience | - | **5** | 新增学习率衰减 |
-| lr_decay_factor | - | **0.5** | 学习率衰减因子 |
 
 **预期效果**：
 - 训练速度: **45分钟/epoch**（比A17-2慢1.5倍，但仍可接受）
